--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://drakou111.github.io/RecipyTree",
+  "homepage": "https://drakou111.github.io/RecipeTree",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
